# nyc-sight

./: .env.example  .gitignore  AGENTS.md  API.md  NOTES.md  README.md  ingest_nyc_data.sh  kokoro-tts-spark-prompt.md  main.py  parakeet_eou_server.md  pyproject.toml
.claude/: settings.local.json
SparkSight/SparkSight/: SparkSightApp.swift
SparkSight/SparkSight.xcodeproj/: project.pbxproj
SparkSight/SparkSightTests/: SparkSightTests.swift
SparkSight/SparkSightUITests/: SparkSightUITests.swift  SparkSightUITestsLaunchTests.swift
closure-data/: README.md  Street_Closures_due_to_Construction_Activities_by_Block_20260412.csv  llm_tool_prompt.md  server.py
demos/docs/: Demo Video Instructions.md  case1-opendata.md  case2-vision.md  case2-warning.md  case3-vision.md
ios/: README.md
ios/SparkSight/: Package.swift
ios/SparkSight/SparkSight/: Info.plist  SparkSightApp.swift
kokoro-tts-server/: .gitignore  Dockerfile  README.md  audio_encoder.py  backend.py  benchmark.py  chunker.py  client.py  config.py  requirements-client.txt  requirements.txt  server.py  voice_manager.py
kokoro-tts-server/scripts/: download_model.sh  test_client.py
nim-stack/: .env  README.md  docker-compose.yml  healthcheck.sh  start.sh  stop.sh
parakeet-eou-server/: Cargo.toml  README.md
parakeet-eou-server/scripts/: download_model.sh  test_client.py
parakeet-eou-server/src/: audio.rs  main.rs  metrics.rs  server.rs  transcriber.rs
scripts/: cos_nemo_docker.sh  gemma4_vllm_setup.sh  kokoro_tts_setup.sh  parakeet_setup.sh
src/: asr.py  camera.py  detector.py  frame_buffer.py  nyc_data.py  orchestrator.py  tts.py  vlm.py
src/nyc_sight/: __init__.py  main.py
src/nyc_sight/agents/: __init__.py
src/nyc_sight/bridge/: __init__.py  models.py  orchestrator.py  prompt_state.py
src/spark_sight/: config.py  main.py
src/spark_sight/agents/: __init__.py  base.py
src/spark_sight/bridge/: __init__.py  frame_buffer.py  models.py  orchestrator.py  prompt_state.py
src/spark_sight/data/: closures.py  restrooms.py
src/spark_sight/server/: __init__.py  app.py  frame_buffer.py  protocol.py
src/spark_sight/speech/: __init__.py  (+2 more)
tests/: test_ambient.py  test_bridge.py  test_config.py  test_frame_buffer.py  test_planning.py  test_protocol.py  test_server.py  test_speech.py
yolo-stack/: Server.py  client_example.py  local_interface.py  yolo_setup.sh
(+27 files in other folders)
