[project]
name = "nyc-sight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "gradio>=6.11.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "piper-tts>=1.4.2",
    "requests>=2.33.1",
    "sounddevice>=0.5.5",
    "ultralytics>=8.4.36",
]
