[project]
name = "nyc-sight"
version = "0.1.0"
description = "Real-time ambient AI assistant for visually impaired New Yorkers — runs entirely on NVIDIA GB10"
readme = "README.md"
authors = [
    { name = "Charles Ji", email = "me@charlesji.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.31.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
