[project]
name = "spark-sight"
version = "0.1.0"
description = "Real-time ambient AI assistant for visually impaired New Yorkers — runs entirely on NVIDIA GB10"
readme = "README.md"
authors = [
    { name = "Charles Ji", email = "me@charlesji.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
